<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.panormus.Final"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_header"
        android:textSize="30sp"
        android:textColor="#009688"
        android:paddingBottom="8dp"
        android:fontFamily="sans-serif-medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_body"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:paddingBottom="8dp"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion_question"
        android:textSize="16sp"

        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#009688"/>



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:onClick="suggestionButton"/>

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:onClick="suggestionButton"/>

    </RadioGroup>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/edit_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/edit_mess"
        android:inputType="textCapSentences|textMultiLine" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendSuggestion"
        android:text="@string/send_butt"
        android:enabled="false"/>




</LinearLayout>
