<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cathedral">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cattedrale"
            android:clipToPadding="false"
            android:outlineProvider="bounds"
            android:elevation="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cathedral"
                android:textColor="#f57c00"
                android:textSize="30sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/cathedral_body"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:elevation="5dp"
                android:orientation="horizontal"
                android:outlineProvider="bounds">



                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cat_interno" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cathedral_body2"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <Button
                android:layout_width="wrap_content"
                android:text="@string/cathedral_info"
                android:onClick="cathedralInfo"
                style="@style/butt_orange"
                android:layout_marginTop="8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/third_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Next"
                    android:onClick="next3"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>